--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,12 @@
 <body>
 	<main class="container">
 		<section class="about">
-			<img src="{{ "/assets/portfolio.png" | relative_url }}" alt="{{ site.plainwhite.name }}">
-			<h2>{{ site.plainwhite.name }}</h2>
+			<a href="https://snsd0805.github.io">
+				<img src="{{ "/assets/portfolio.png" | relative_url }}" alt="{{ site.plainwhite.name }}">
+			</a>
+			<a href="https://snsd0805.github.io">
+				<h2>{{ site.plainwhite.name }}</h2>
+			</a>
 			<p class="tagline">{{ site.plainwhite.tagline }}</p>
 			<ul class="social">
 				<a href="https://github.com/{{ site.plainwhite.social_links.github }}"><li><i class="icon-github-circled"></i></li></a>
